--- a/index2.html
+++ b/index2.html
@@ -11,7 +11,7 @@
  <header id="header">Mike Mulligan and His Steam Shovel</header>
     <div id="scene1">
 
-        <img src="mikeHome.jpg" width="60%" align="center" alt="">
+        <img id="img2"src="mikeHome.jpg" alt="">
         <!-- <p>first Img</p> -->
 
   <p id="noScene1">Start</p>
@@ -41,7 +41,7 @@
     </div>
     <div id="scene5">
 
-        <img id="img1" src="mike22.jpg" alt="">
+        <img id="img1" src="mikeredo.jpg" alt="">
         <!-- <p>first Img</p> -->
   <p id="noScene4">Next</p>
 </div>
