--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
       </div>
     </div>
     <div id="scene2">
-      <div class="img">
-        <img width="100%"src="mikemulligan1.jpg" alt="">
+  
+        <img src="mikemulligan1.jpg" alt="">
         <!-- <p>second Img</p> -->
         <p id="yesScene1">yes</p> <p id="noScene1">no</p>
       </div>
     </div>
     <div id="scene3">
       <img id="img1" src="mikemulligan1.jpg" alt="">
-      <img src="" alt="">
+
         <!-- <img src="mikeHome.jpg" alt=""> -->
         <!-- <p><th></th>ird Img</p> -->
        <p id="noScene2">Next</p>
