--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
     </div>
     <div id="scene2">
-  
+
         <img src="mikemulligan1.jpg" alt="">
         <!-- <p>second Img</p> -->
         <p id="yesScene1">yes</p> <p id="noScene1">no</p>
@@ -125,7 +125,7 @@
         <img id="img1" src="mike9.jpg" alt="">
         <!-- <p>first Img</p> -->
 
-  <p>you lived happily ever after</p>
+<p id="yesScene15">You lived happily ever after, restart</p>
 
       </div>
     </div>
